--- a/src/app/routes/nav/nav.component.html
+++ b/src/app/routes/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-light bg-secondary">
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#" [routerLink]="[ '' ]" >Home <span class="sr-only">(current)</span></a>
