se agrega servicios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,8 @@
     <router-outlet></router-outlet>
     <app-footer></app-footer>
   </div>
+
+  <app-servicios></app-servicios>
 </body>
 </html>
 
