Se mdifica pagina

--- a/src/app/routes/footer/footer.component.html
+++ b/src/app/routes/footer/footer.component.html
@@ -1,1 +1,1 @@
-<div class="bg-secondary text-center mt-5">Este es el footer</div>
+<div class="bg-primary text-center mt-5 fixed-bottom">Este es el footer</div>
