--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,23 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <title>Document</title>
+  <title>Curso Angular</title>
 </head>
 <body>
 
-  <nav class="bg-primary">
+  <div class="bg-primary text-center">
       <h1 class="">Mi curso de Angular desde 0</h1>
-  </nav>
-  <app-ngif></app-ngif>
-  <app-ngclass></app-ngclass>
-  <app-ngfor></app-ngfor>
-  <div class="container bg-light">
+  </div>
+  <div>
     <app-nav></app-nav>
     <router-outlet></router-outlet>
+    <div class="mt-5"></div>
     <app-footer></app-footer>
   </div>
-
-  <app-servicios></app-servicios>
 </body>
 </html>
 
