--- a/src/app/routes/nav/nav.component.html
+++ b/src/app/routes/nav/nav.component.html
@@ -1,12 +1,11 @@
-<nav class="navbar navbar-light bg-secondary">
-  
-    <div class="navbar-collapse">
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#" [routerLink]="[ '' ]" >Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="[ '/cuerpo' ]">Login</a>
+        <li class="nav-item" *ngFor="let config of configNav, index as i">
+          <a class="nav-link " href="#" [routerLink]="[ config.link ]" > {{ config.name }} <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
