Actualización de proyecto

--- a/src/app/descriptionequipo/descriptionequipo.component.html
+++ b/src/app/descriptionequipo/descriptionequipo.component.html
@@ -4,7 +4,7 @@
       <h6>Nombre: {{equipo.nombre}}</h6>
       <h6>Especialidad: {{equipo.especialidad}}</h6>
       <h6>Descripcón de la especialidad: {{equipo.descripcion}}</h6>
-      <a  [routerLink]="['servicios']">Volver.</a>
+      <a  [routerLink]="['/servicios']">Volver.</a>
     </li>
   </ul>
 </div>
